# redcap2bids

./: .gitignore  README.md  pyproject.toml
scripts/: adaptIstrument.py  instrument2redcap.py  redcap2participants.py
src/: config.py  instruments.py  prep.py
src/instruments/: ehi.py  fal.py
