[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "jwelzel",email = "52565341+JuliusWelzel@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pycap (>=2.7.0,<3.0.0)",
    "rcol>=0.0.2",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
